safari subheader-header gap fix 01

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -569,7 +569,7 @@ body {
 //SUHEADER 
 .subheader {
   position: fixed;
-  top: calc(6.9rem + 1.5px);
+  top: 6.9rem;
   left:0;
   //padding-left: 18.1rem;
   width: 100%;
